Pod.yml
apiVersion: v1
kind: apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: devopstrainer/deploy:v1
       ports:
      - containerPort: 80
