svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: svc2
  labels:
     app: newapp
spec:
  selector:
    app: app-v1
  ports:
  - port: 80
    nodePort: 30005
    protocol : TCP
  type: NodePort
